# rss-puller

./: .gitignore  README.md  app.py  content_ratings.csv  pyproject.toml
static/: styles.css
templates/: display_content.html  thank_you.html
