[tool.poetry]
name = "rss-puller"
version = "0.1.0"
description = ""
authors = ["adammlarge <large.adam.m@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.0"
flask-basicauth = "^0.2"
feedparser = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
